--- a/assets/style.css
+++ b/assets/style.css
@@ -1,1 +1,8 @@
 /* CSS */ 
+form.termine input[type=checkbox]:checked + label  {
+    background-color: #b8c2d5;
+}
+
+.tree-seperator {
+    list-style-type:none;
+}
